# ros-ea

./: CMakeLists.txt  package.xml
argos_worlds/: come_and_go.argos  construct.argos  light_world.argos  light_world_no_gui.argos  manual_obstacle_light_new_fitness_1.argos  manual_obstacle_light_new_fitness_2.argos  manual_obstacle_light_new_fitness_3.argos  manual_obstacle_light_new_fitness_4.argos  obstacle_light.argos  obstacle_light_alt_1.argos  obstacle_light_alt_2.argos  obstacle_light_new_fitness_1.argos  obstacle_light_new_fitness_2.argos  obstacle_light_new_fitness_3.argos  obstacle_light_new_fitness_4.argos  obstacle_light_no_gui.argos  obstacle_light_no_gui_1.argos  obstacle_light_no_gui_2.argos  obstacle_light_no_gui_3.argos  obstacle_light_no_gui_4.argos  obstacle_light_noise_1.argos  obstacle_light_noise_2.argos  obstacle_light_noise_3.argos  obstacle_light_noise_4.argos  one_path_course.argos  puck_pushing_task.argos  random_obstacle_light.argos
launch/: come_and_go.launch  manual.launch  random_obstacle_light.launch  sim_alternative_scenarios.launch  sim_launch_one_world.launch  sim_noise_phototaxis.launch  sim_phototaxis_all.launch  sim_phototaxis_alt_obst.launch  sim_phototaxis_obst_multiple_sm.launch  sim_phototaxis_obst_new_fitness.launch  simulator_phototaxis.launch  simulator_phototaxis_obstacle.launch  simulator_phototaxis_obstacle_multiple.launch
msg/: FixedLengthGenome.msg  GenomeHeader.msg  LightList.msg  NConnection.msg  NEATGenome.msg  NNode.msg  SMCondition.msg  SMGenome.msg  SMSGenome.msg  SMState.msg  SMTransition.msg  Score.msg  SimulationReport.msg
plugin/: CMakeLists.txt
plugin/argos_loop_functions/: CMakeLists.txt  come_and_go_loop_function.cpp  come_and_go_loop_function.h  fitness_evaluating_loop_function.cpp  fitness_evaluating_loop_function.h  genome_receiver.h  genome_runner_loop_function.cpp  genome_runner_loop_function.h  light_random_init_runner.cpp  light_random_init_runner.h  message_decoder.cpp  message_decoder.h  mpga_loop_functions.h  mpga_phototaxis_loop_functions.cpp  mpga_phototaxis_loop_functions.h  mpga_phototaxis_obstacle_loop_functions.cpp  mpga_phototaxis_obstacle_loop_functions.h  mpga_phototaxis_space_dependent_fitness.cpp  mpga_phototaxis_space_dependent_fitness.h  random_obstacles_loop_function.cpp  random_obstacles_loop_function.h  right_hand_rule_loop_function.cpp  right_hand_rule_loop_function.h  robot_launching_loop_function.cpp  robot_launching_loop_function.h
plugin/argos_loop_functions/fitness_functions/: CMakeLists.txt  absolute_distance_fitness_function.cpp  absolute_distance_fitness_function.h  come_and_go_fitness_function.cpp  come_and_go_fitness_function.h  fitness_function.cpp  fitness_function.h  space_dependent_fitness_function.cpp  space_dependent_fitness_function.h  summed_in_light_range_fitness_function.cpp  summed_in_light_range_fitness_function.h
plugin/argos_ros_bot/: CMakeLists.txt  argos_ros_bot.cpp  argos_ros_bot.h  differential_drive_robot.cpp  differential_drive_robot.h  fixed_two_state_controller.cpp  fixed_two_state_controller.h  neat_controller.cpp  neat_controller.h  perceptron_network.cpp  perceptron_network.h  puck_seeing_ros_bot.cpp  puck_seeing_ros_bot.h  right_hand_controller.cpp  robot_controller.h  selector_state_machine.cpp  state_machine_controller.cpp  state_machine_controller.h  transition_state_machine.cpp  transition_state_machine.h
plugin/argos_ros_bot/controllers/: CMakeLists.txt  fixed_two_state_controller.cpp  fixed_two_state_controller.h  neat_controller.cpp  neat_controller.h  right_hand_controller.cpp  right_hand_controller.h  robot_controller.h  selector_state_machine.cpp  selector_state_machine.h  state_machine_controller.cpp  state_machine_controller.h  transition_state_machine.cpp
plugin/tests/: CMakeLists.txt  controller_tests.cpp  neat_test.cpp  neat_test.h  perceptron_network_test.cpp  perceptron_network_test.h  state_machine_test.cpp  state_machine_test.h
scripts/: alt_obstacle_scenario.py  argos_experiment_runner.py  argos_launcher.py  config-feedforward  config-feedforward-no-structural  config-sm_free_states  config-sm_one_state  config-sm_state_species  controller_change.sh  demo_controller.py  fixed_two_state_experiment.py  ga_runner.py  genome_evaluators.py  genome_executer.py  helper_functions.py  message_parsing.py  neat_ga_runner.py  noisy_environment_multiple_trails.py  one-layer-nn-runner.py  one_path_scenario.py  post_experiment_analysis.py  predefined_experiments.py  ros_robot_experiment.py  run_and_store_states.py  run_and_visualize.py  run_genome_from_file.py  run_script.sh  scenario_four_exaggeration_experiment.py  simulation_communication.py  simulation_control.py  sm_ga_runner.py  sm_ga_runner_new.py  sm_ga_runner_selector.py  sm_ga_seeded_runner.py  state_gatherer.py  tanh_verification_experiment.py  two-layer-nn-runner.py
scripts/configs/: config-feedforward  config-feedforward-2-hidden-layers  config-feedforward-no-structural  config-sm_fixed_two_states  config-sm_free_states  config-sm_manual_seed  config-sm_one_state  config-sm_selector  config-sm_state_species  config-sm_three_states  config-sm_two_states
scripts/tools/: draw_functions.py  genome_analysis_tool.py  helper_functions.py  scenario_visualizers.py  score_saver.py  scores_to_fitness_image.py  state_comparison.py  visualize_states.py
srv/: AtLight.srv  SensorDataRequest.srv  SimScore.srv  StateRequest.srv  Trajectory.srv
